syntax = "proto3";

package protobuf;

option go_package = "./;pb";

import "processor.proto";
import "memory.proto";
import "storage.proto";
import "screen.proto";
import "keyboard.proto";
import "google/protobuf/timestamp.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storage = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    // Weight in grams
    uint32 weight_grams = 10;
    // Weight in pounds
    uint32 weight_pounds = 11;
  }
  // Price in dollars
  double price = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp release_date = 14;
}

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
}
